# notes

./: pyproject.toml
notes/: __init__.py  config.py  models.py
notes/migrations/versions/: f03b019e0779_.py
tests/: test_notes.py
